--- a/reference.bib
+++ b/reference.bib
@@ -56,13 +56,13 @@
   number  = {2}
 }
 
+
 @inproceedings{Adamson2003,
   author    = {Adamson, Anders and Alexa, Marc},
   title     = {Approximating and intersecting surfaces from points},
   booktitle = SGPOLD,
   year      = {2003}
 }
-
 
 @article{Adikusuma2020,
   title   = {Fast construction of discrete geodesic graphs},
@@ -74,7 +74,6 @@
 }
 
 
-
 @inproceedings{Afouras2018,
   author    = {Afouras, Triantafyllos and Chung, Joon Son and Zisserman, Andrew},
   booktitle = {INTERSPEECH},
@@ -82,13 +81,14 @@
   year      = {2018}
 }
 
+
+
 @inproceedings{Alayrac2020,
   title     = {Self-Supervised MultiModal Versatile Networks},
   author    = {Alayrac, Jean-Baptiste and Recasens, Adria and Schneider, Rosalia and Arandjelovic, Relja and Ramapuram, Jason and De Fauw, Jeffrey and Smaira, Lucas and Dieleman, Sander and Zisserman, Andrew},
   booktitle = NeurIPS,
   year      = {2020}
 }
-
 
 @article{Alhashim2012,
   author  = {Alhashim, Ibraheem and Zhang, Hao and Liu, Ligang},
@@ -115,6 +115,7 @@
   year      = {1999}
 }
 
+
 @inproceedings{Aoki2019,
   author    = {Aoki, Yasuhiro and Goforth, Hunter and Arun Srivatsan, Rangaprasad and Lucey, Simon},
   booktitle = CVPR,
@@ -135,7 +136,6 @@
   journal = {arXiv preprint},
   year    = {2017}
 }
-
 
 @inproceedings{Arsalan2017,
   title     = {Synthesizing {3D} shapes via modeling multi-view depth maps and silhouettes with deep generative networks},
@@ -172,13 +172,13 @@
   journal = SIG
 }
 
+
 @inproceedings{Atzmon2020,
   title     = {{SAL}: Sign agnostic learning of shapes from raw data},
   author    = {Atzmon, Matan and Lipman, Yaron},
   booktitle = CVPR,
   year      = {2020}
 }
-
 
 @inproceedings{Atzmon2021,
   title     = {{SALD}: Sign Agnostic Learning with Derivatives},
@@ -188,8 +188,6 @@
 }
 
 
-
-  
 @article{Au2012,
   author  = {Au, O.K.-C. and Youyi Zheng and Menglin Chen and Pengfei Xu and Chiew-Lan Tai},
   title   = {Mesh segmentation with concavity-aware fields},
@@ -201,13 +199,14 @@
 
 
 
-
+  
 @inproceedings{Aubry2011,
   author    = {Aubry, Mathieu and Schlickewei, Ulrich and Cremers, Daniel},
   booktitle = {ICCV Workshop},
   title     = {The wave kernel signature: A quantum mechanical approach to shape analysis},
   year      = {2011}
 }
+
 
 
 
@@ -220,13 +219,14 @@
   year    = {2016}
 }
 
+
+
 @article{Ba2016,
   title   = {Layer normalization},
   author  = {Ba, Jimmy Lei and Kiros, Jamie Ryan and Hinton, Geoffrey E},
   journal = {arXiv preprint arXiv:1607.06450},
   year    = {2016}
 }
-
 
 @article{Badrinarayanan2017,
   author  = {Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
@@ -237,13 +237,12 @@
   number  = {12}
 }
 
+
 @book{Baerentzen2002,
   title     = {Manipulation of volumetric solids with applications to sculpting},
   author    = {B{\ae}rentzen, J Andreas},
   publisher = {Citeseer}
 }
-
-
 
 @inproceedings{Bai2016,
   author    = {Song Bai and Xiang Bai and Zhichao Zhou and Zhaoxiang Zhang and Longin Jan Latecki},
@@ -251,6 +250,8 @@
   booktitle = CVPR,
   year      = {2016}
 }
+
+
 
 @inproceedings{Bai2021,
   title     = {Unsupervised multi-source domain adaptation for person re-identification},
@@ -277,8 +278,6 @@
   year    = {2020}
 }
 
-
-
 @article{Bajaj2003,
   author  = {Bajaj, Chandrajit L. and Xu, Guoliang},
   title   = {Anisotropic diffusion of surfaces and functions on surfaces},
@@ -298,13 +297,13 @@
 }
 
 
+
 @inproceedings{Behley2019,
   title     = {{SemanticKITTI}: A dataset for semantic scene understanding of {Lidar} sequences},
   author    = {Behley, Jens and Garbade, Martin and Milioto, Andres and Quenzel, Jan and Behnke, Sven and Stachniss, Cyrill and Gall, Jurgen},
   booktitle = ICCV,
   year      = {2019}
 }
-
 
 
 @article{Belongie2002,
@@ -314,6 +313,7 @@
   number  = {4},
   year    = {2002}
 }
+
 
 
 @inproceedings{Bendels2003,
@@ -364,13 +364,14 @@
 }
 
 
-
 @inproceedings{Bogo2014,
   title     = {{FAUST}: Dataset and evaluation for {3D} mesh registration},
   author    = {Bogo, Federica and Romero, Javier and Loper, Matthew and Black, Michael J},
   booktitle = CVPR,
   year      = {2014}
 }
+
+
 
 @inproceedings{Bogo2017,
   title     = {Dynamic {FAUST}: Registering human bodies in motion},
@@ -396,7 +397,6 @@
   volume  = {32},
   number  = {4}
 }
-
 
 @article{Bommes2013a,
   author  = {Bommes, David and L\'{e}vy, Bruno and Pietroni, Nico and Puppo, Enrico and Silva, Claudio and Tarini, Marco and Zorin, Denis},
@@ -435,13 +435,13 @@
   number  = {1}
 }
 
+
 @book{Botsch2010,
   author    = {Mario Botsch and Leif Kobbelt and Mark Pauly and Pierre Alliez and Bruno L\'{e}vy},
   title     = {Polygon Mesh Processing},
   publisher = {CRC press},
   year      = {2010}
 }
-
 
 @article{Boulch2016,
   author  = {Boulch, Alexandre and Marlet, Renaud},
@@ -474,6 +474,14 @@
   title     = {Generative and discriminative voxel modeling with convolutional neural networks},
   booktitle = {3D deep learning workshop (NeurIPS)},
   year      = {2016}
+}
+
+
+@inproceedings{Brody2022,
+  title     = {How Attentive are Graph Attention Networks? },
+  author    = {Shaked Brody and Uri Alon and Eran Yahav},
+  booktitle = ICLR,
+  year      = {2022}
 }
 
 
@@ -2830,13 +2838,6 @@
   year    = {2009}
 }
 
-@inproceedings{Pravin2004,
-  author    = {Bhat, Pravin and Ingram, Stephen and Turk, Greg},
-  title     = {Geometric texture synthesis by example},
-  booktitle = SGPOLD,
-  year      = {2004}
-}
-
 @inproceedings{Paine2015,
   author    = {Paine, Tom Le and Khorrami, Pooya and Han, Wei and Huang, Thomas S},
   booktitle = {ICLR workshop},
@@ -2930,6 +2931,13 @@
   author    = {Prakash, Aayush and Boochoon, Shaad and Brophy, Mark and Acuna, David and Cameracci, Eric and State, Gavriel and Shapira, Omer and Birchfield, Stan},
   booktitle = {International Conference on Robotics and Automation (ICRA)},
   year      = {2019}
+}
+
+@inproceedings{Pravin2004,
+  author    = {Bhat, Pravin and Ingram, Stephen and Turk, Greg},
+  title     = {Geometric texture synthesis by example},
+  booktitle = SGPOLD,
+  year      = {2004}
 }
 
 @inproceedings{Qi2016,
