--- a/reference.bib
+++ b/reference.bib
@@ -64,6 +64,7 @@
   year      = {2003}
 }
 
+
 @article{Adikusuma2020,
   title   = {Fast construction of discrete geodesic graphs},
   author  = {Adikusuma, Yohanes Yudhi and Fang, Zheng and He, Ying},
@@ -81,14 +82,13 @@
   year      = {2018}
 }
 
-
-
 @inproceedings{Alayrac2020,
   title     = {Self-Supervised MultiModal Versatile Networks},
   author    = {Alayrac, Jean-Baptiste and Recasens, Adria and Schneider, Rosalia and Arandjelovic, Relja and Ramapuram, Jason and De Fauw, Jeffrey and Smaira, Lucas and Dieleman, Sander and Zisserman, Andrew},
   booktitle = NeurIPS,
   year      = {2020}
 }
+
 
 @article{Alhashim2012,
   author  = {Alhashim, Ibraheem and Zhang, Hao and Liu, Ligang},
@@ -100,13 +100,13 @@
 }
 
 
+
 @inproceedings{Andersen2009,
   author    = {Andersen, Vedrana and Desbrun, Mathieu and B{\ae}rentzen, J. Andreas and Aan{\ae}s, Henrik},
   title     = {Height and tilt geometric texture},
   booktitle = {Proc. of the 5th International Symposium on Advances in Visual Computing: Part I},
   year      = {2009}
 }
-
 
 @inproceedings{Ankerst1999,
   author    = {Ankerst, Mihael and Kastenm{\"u}ller, Gabiand Kriegel, Hans-Peter and Seidl, Thomas},
@@ -123,12 +123,14 @@
   year      = {2019}
 }
 
+
 @inproceedings{Armeni2016,
   title     = {{3D} Semantic Parsing of Large-Scale Indoor Spaces},
   author    = {Iro Armeni and Ozan Sener and Amir R. Zamir and Helen Jiang and Ioannis Brilakis and Martin Fischer and Silvio Savarese},
   booktitle = CVPR,
   year      = {2016}
 }
+
 
 @article{Armeni2017,
   title   = {Joint {2D-3D}-Semantic Data for Indoor Scene Understanding},
@@ -144,14 +146,12 @@
   year      = {2017}
 }
 
-
 @inproceedings{Arthur2007,
   author    = {Arthur, David and Vassilvitskii, Sergei},
   title     = {K-means++: the advantages of careful seeding},
   booktitle = {SODA},
   year      = {2007}
 }
-
 
 @article{Attene2013,
   author  = {Attene, Marco and Campen, Marcel and Kobbelt, Leif},
@@ -180,6 +180,7 @@
   year      = {2020}
 }
 
+
 @inproceedings{Atzmon2021,
   title     = {{SALD}: Sign Agnostic Learning with Derivatives},
   author    = {Atzmon, Matan and Lipman, Yaron},
@@ -197,17 +198,12 @@
   number  = {7}
 }
 
-
-
-  
 @inproceedings{Aubry2011,
   author    = {Aubry, Mathieu and Schlickewei, Ulrich and Cremers, Daniel},
   booktitle = {ICCV Workshop},
   title     = {The wave kernel signature: A quantum mechanical approach to shape analysis},
   year      = {2011}
 }
-
-
 
 
 @article{Averkiou2016,
@@ -221,12 +217,16 @@
 
 
 
+  
 @article{Ba2016,
   title   = {Layer normalization},
   author  = {Ba, Jimmy Lei and Kiros, Jamie Ryan and Hinton, Geoffrey E},
   journal = {arXiv preprint arXiv:1607.06450},
   year    = {2016}
 }
+
+
+
 
 @article{Badrinarayanan2017,
   author  = {Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
@@ -236,6 +236,7 @@
   volume  = {39},
   number  = {12}
 }
+
 
 
 @book{Baerentzen2002,
@@ -250,7 +251,6 @@
   booktitle = CVPR,
   year      = {2016}
 }
-
 
 
 @inproceedings{Bai2021,
@@ -268,6 +268,8 @@
   number  = {4},
   journal = SIG
 }
+
+
 
 @article{Bailey2020,
   title   = {Fast and deep facial deformations},
@@ -287,8 +289,6 @@
   number  = {1}
 }
 
-
-
 @article{Battaglia2018,
   title   = {Relational inductive biases, deep learning, and graph networks},
   author  = {Battaglia, Peter W and Hamrick, Jessica B and Bapst, Victor and Sanchez-Gonzalez, Alvaro and Zambaldi, Vinicius and Malinowski, Mateusz and Tacchetti, Andrea and Raposo, David and Santoro, Adam and Faulkner, Ryan and others},
@@ -296,14 +296,13 @@
   year    = {2018}
 }
 
-
-
 @inproceedings{Behley2019,
   title     = {{SemanticKITTI}: A dataset for semantic scene understanding of {Lidar} sequences},
   author    = {Behley, Jens and Garbade, Martin and Milioto, Andres and Quenzel, Jan and Behnke, Sven and Stachniss, Cyrill and Gall, Jurgen},
   booktitle = ICCV,
   year      = {2019}
 }
+
 
 
 @article{Belongie2002,
@@ -332,6 +331,7 @@
   volume  = {35},
   number  = {8}
 }
+
 
 
 @article{Berger2017,
@@ -372,13 +372,13 @@
 }
 
 
-
 @inproceedings{Bogo2017,
   title     = {Dynamic {FAUST}: Registering human bodies in motion},
   author    = {Bogo, Federica and Romero, Javier and Pons-Moll, Gerard and Black, Michael J},
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @article{Bommes2009,
   author  = {Bommes, David and Zimmer, Henrik and Kobbelt, Leif},
@@ -388,6 +388,8 @@
   volume  = {28},
   number  = {3}
 }
+
+
 
 @article{Bommes2013,
   author  = {Bommes, David and Campen, Marcel and Ebke, Hans-Christian and Alliez, Pierre and Kobbelt, Leif},
@@ -407,7 +409,6 @@
   number  = {6}
 }
 
-
 @article{Boscaini2015,
   author  = {Boscaini, Davide and Masci, Jonathan and Melzi, Simone and Bronstein, Michael M and Castellani, Umberto and Vandergheynst, Pierre},
   title   = {Learning class-specific descriptors for deformable shapes using localized spectral convolutional networks},
@@ -416,7 +417,6 @@
   volume  = {34},
   number  = {5}
 }
-
 
 @inproceedings{Boscaini2016,
   author    = {Boscaini, Davide and Masci, Jonathan and Rodol\`a, Emanuele and Bronstein, Michael M.},
@@ -443,6 +443,7 @@
   year      = {2010}
 }
 
+
 @article{Boulch2016,
   author  = {Boulch, Alexandre and Marlet, Renaud},
   title   = {Deep learning for robust normal estimation in unstructured point clouds},
@@ -459,7 +460,6 @@
   booktitle = {Proc. of the 4th Eurographics Conference on 3D Object Retrieval},
   year      = {2011}
 }
-
 
 @book{Bridson2015,
   title     = {Fluid simulation for computer graphics},
@@ -527,6 +527,7 @@
   number  = {7}
 }
 
+
 @article{Canas2006,
   author  = {Ca\~{n}as, Guillermo D. and Gortler, Steven J.},
   title   = {Surface remeshing in arbitrary codimensions},
@@ -545,7 +546,6 @@
   volume  = {33},
   number  = {4}
 }
-
 
 @inproceedings{Cao2018,
   author    = {Cao, Yan-Pei and Liu, Zheng-Ning and Kuang, Zheng-Fei and Kobbelt, Leif and Hu, Shi-Min},
@@ -807,6 +807,7 @@
   year      = {2000}
 }
 
+
 @article{Cohen2018,
   title   = {Spherical {CNNs}},
   author  = {Cohen, Taco S and Geiger, Mario and K{\"o}hler, Jonas and Welling, Max},
@@ -824,7 +825,6 @@
   volume  = {23}
 }
 
-
 @article{Coifman2005,
   title   = {Geometric diffusions as a tool for harmonic analysis and structure definition of data: Diffusion maps},
   author  = {Coifman, Ronald R and Lafon, Stephane and Lee, Ann B and Maggioni, Mauro and Nadler, Boaz and Warner, Frederick and Zucker, Steven W},
@@ -840,6 +840,7 @@
   title  = {{Data-driven science --- Wikipedia{,}} The Free Encyclopedia},
   year   = {2018}
 }
+
 
 @inproceedings{Cordonnier2020,
   title     = {On the relationship between self-attention and convolutional layers},
@@ -857,7 +858,6 @@
   volume  = {13},
   number  = {3}
 }
-
 
 @inproceedings{Crane2013,
   author    = {Keenan Crane and Fernando de Goes and Mathieu Desbrun and Peter Schr\"{o}der},
@@ -910,6 +910,7 @@
   year    = {1989}
 }
 
+
 @inproceedings{Dai2017,
   author    = {Dai, Angela and Qi, Charles R. and Nie{\ss}ner, Matthias},
   title     = {Shape completion using {3D}-encoder-predictor CNNs and shape synthesis},
@@ -925,7 +926,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Dai2018,
   author    = {Dai, Angela and Ritchie, Daniel and Bokeloh, Martin and Reed, Scott and Sturm, J{\"u}rgen and Nie{\ss}ner, Matthias},
   title     = {{ScanComplete}: Large-Scale Scene Completion and Semantic Segmentation for {3D} Scans},
@@ -933,12 +933,14 @@
   year      = {2018}
 }
 
+
 @inproceedings{Dai2018a,
   title     = {{3DMV}: Joint {3D}-multi-view prediction for {3D} semantic scene segmentation},
   author    = {Dai, Angela and Nie{\ss}ner, Matthias},
   booktitle = ECCV,
   year      = {2018}
 }
+
 
 @article{DeGoes2011,
   author  = {De Goes, Fernando and Goldenstein, Siome and Desbrun, Mathieu and Velho, Luiz},
@@ -948,7 +950,6 @@
   volume  = {35},
   number  = {1}
 }
-
 
 @inproceedings{Deng2009,
   author    = {Jia Deng and Wei Dong and Richard Socher and Jia Li and Kai Li and Li Fei-Fei},
@@ -979,6 +980,7 @@
   year    = {2018}
 }
 
+
 @article{Diebel2006,
   author  = {Diebel, James R. and Thrun, Sebastian and Br\"{u}nig, Michael},
   title   = {A Bayesian method for probable surface reconstruction and decimation},
@@ -988,14 +990,12 @@
   number  = {1}
 }
 
-
 @inproceedings{Doersch2015,
   author    = {Doersch, Carl and Gupta, Abhinav and Efros, Alexei A},
   booktitle = ICCV,
   title     = {Unsupervised visual representation learning by context prediction},
   year      = {2015}
 }
-
 
 @inproceedings{Dollar2010,
   author    = {Doll{\'a}r, Piotr and Welinder, Peter and Perona, Pietro},
@@ -1005,12 +1005,14 @@
   publiser  = {IEEE}
 }
 
+
 @inproceedings{Dong2022,
   title     = {{CSWin Transformer}: A general vision transformer backbone with cross-shaped windows},
   author    = {Dong, Xiaoyi and Bao, Jianmin and Chen, Dongdong and Zhang, Weiming and Yu, Nenghai and Yuan, Lu and Chen, Dong and Guo, Baining},
   booktitle = CVPR,
   year      = {2022}
 }
+
 
 @inproceedings{Dosovitskiy2014,
   title     = {Discriminative unsupervised feature learning with convolutional neural networks},
@@ -1093,7 +1095,6 @@
   number  = {19}
 }
 
-
 @article{Fan2010,
   author  = {Hanqi Fan and Yizhou Yu and Qunsheng Peng},
   title   = {Robust feature-preserving mesh denoising based on consistent subneighborhoods},
@@ -1124,6 +1125,7 @@
   booktitle = CVPR,
   year      = {2014}
 }
+
 
 @inproceedings{Feng2019,
   title     = {{MeshNet}: Mesh Neural Network for {3D} Shape Representation},
@@ -1169,7 +1171,6 @@
   number  = {3}
 }
 
-
 @article{Fouss2007,
   title   = {Random-walk computation of similarities between nodes of a graph with application to collaborative recommendation},
   author  = {Fouss, Francois and Pirotte, Alain and Renders, Jean-Michel and Saerens, Marco},
@@ -1185,6 +1186,7 @@
   booktitle = CVPR,
   year      = {2022}
 }
+
 
 @inproceedings{Frisken2000,
   author    = {Frisken, Sarah F. and Perry, Ronald N. and Rockwood, Alyn P. and Jones, Thouis R.},
@@ -1202,7 +1204,6 @@
   number  = {4}
 }
 
-
 @article{Furuya2019,
   author  = {Takahiko Furuya and Ryutarou Ohbuchi},
   title   = {Feature set aggregator: unsupervised representation learning of sets for their comparison},
@@ -1217,6 +1218,7 @@
   title     = {Parsing geometry using structure-aware shape templates},
   year      = {2018}
 }
+
 
 @inproceedings{GarciaGarcia2016,
   author    = {A. Garcia-Garcia and F. Gomez-Donoso and J. Garcia-Rodriguez and S. Orts-Escolano and M. Cazorla and J. Azorin-Lopez},
@@ -1374,7 +1376,6 @@
   volume  = {37}
 }
 
-
 @article{Guo2015,
   author  = {Guo, Kan and Zou, Dongqing and Chen, Xiaowu},
   title   = {{3D} mesh labeling via deep convolutional neural networks},
@@ -1390,6 +1391,7 @@
   booktitle = {IJCAI},
   year      = {2018}
 }
+
 
 @misc{Guo2019,
   author        = {Yulan Guo and Hanyun Wang and Qingyong Hu and Hao Liu and Li Liu and Mohammed Bennamoun},
@@ -1423,8 +1425,6 @@
   year      = {1999}
 }
 
-
-
 @inproceedings{Gutmann2010,
   author    = {Gutmann, Michael and Hyv{\"a}rinen, Aapo},
   title     = {Noise-Contrastive Estimation: A new estimation principle for unnormalized statistical models},
@@ -1432,13 +1432,14 @@
   year      = {2010}
 }
 
-
 @inproceedings{Gwak2020,
   title     = {Generative sparse detection networks for {3D} single-shot object detection},
   author    = {Gwak, JunYoung and Choy, Christopher and Savarese, Silvio},
   booktitle = ECCV,
   year      = {2020}
 }
+
+
 
 @inproceedings{Ha2017,
   title     = {{HyperNetworks}},
@@ -1455,13 +1456,13 @@
   year      = 2006
 }
 
-
 @inproceedings{Haene2017,
   author    = {Christian H{\"a}ne and Shubham Tulsiani and Jitendra Malik},
   booktitle = threeDV,
   title     = {Hierarchical surface prediction for {3D} object reconstruction},
   year      = {2017}
 }
+
 
 @inproceedings{Hamilton2017,
   author    = {Hamilton, Will and Ying, Zhitao and Leskovec, Jure},
@@ -1470,13 +1471,13 @@
   year      = {2017}
 }
 
+
 @inproceedings{Han2017,
   author    = {Xiaoguang Han and Zhen Li and Haibin Huang and Evangelos Kalogerakis and Yizhou Yu},
   title     = {High-resolution shape completion using deep neural networks for global structure and local geometry inference},
   booktitle = ICCV,
   year      = {2017}
 }
-
 
 @article{Han2017a,
   author  = {Han, Xiaoguang and Gao, Chang and Yu, Yizhou},
@@ -1487,7 +1488,6 @@
   number  = {4}
 }
 
-
 @article{Han2019,
   author  = {Han, Zhizhong and Lu, Honglei and Liu, Zhenbao and Vong, Chi-Man and Liu, Yu-Shen and Zwicker, Matthias and Han, Junwei and Chen, CL Philip},
   journal = {IEEE Transactions on Image Processing},
@@ -1497,12 +1497,14 @@
   volume  = {28}
 }
 
+
 @inproceedings{Handa2015,
   title     = {{SceneNet}: Understanding Real World Indoor Scenes With Synthetic Data},
   author    = {Ankur Handa and Viorica Patraucean and Vijay Badrinarayanan and Simon Stent and Roberto Cipolla},
   booktitle = CVPR,
   year      = {2016}
 }
+
 
 @article{Hanocka2019,
   author  = {Hanocka, Rana and Hertz, Amir and Fish, Noa and Giryes, Raja and Fleishman, Shachar and Cohen-Or, Daniel},
@@ -1712,14 +1714,12 @@
   number  = {6}
 }
 
-
 @inproceedings{Huang2016,
   title     = {Deep networks with stochastic depth},
   author    = {Huang, Gao and Sun, Yu and Liu, Zhuang and Sedra, Daniel and Weinberger, Kilian Q},
   booktitle = ECCV,
   year      = {2016}
 }
-
 
 @article{Huang2018,
   author  = {Huang, Haibin and Kalogerakis, Evangelos and Chaudhuri, Siddhartha and Ceylan, Duygu and Kim, Vladimir G and Yumer, Ersin},
@@ -1741,12 +1741,14 @@
   articleno = {20}
 }
 
+
 @inproceedings{Izadi2011,
   author    = {Izadi, Shahram and Kim, David and Hilliges, Otmar and Molyneaux, David and Newcombe, Richard and Kohli, Pushmeet and Shotton, Jamie and Hodges, Steve and Freeman, Dustin and Davison, Andrew and Fitzgibbon, Andrew},
   title     = {{KinectFusion}: real-time {3D} reconstruction and interaction using a moving depth camera},
   booktitle = {Proceedings of the 24th Annual ACM Symposium on User Interface Software and Technology},
   year      = {2011}
 }
+
 
 @inproceedings{Jacot2018,
   title     = {Neural tangent kernel: Convergence and generalization in neural networks},
@@ -1868,7 +1870,6 @@
   number  = {6}
 }
 
-
 @article{Kaick2011a,
   author  = {Oliver van Kaick and Andrea Tagliasacchi and Oana Sidi and Hao Zhang and Daniel Cohen-Or and Lior Wolf and and Ghassan Hamarneh},
   title   = {Prior Knowledge for part correspondence},
@@ -1877,7 +1878,6 @@
   volume  = {30},
   number  = {2}
 }
-
 
 @article{Kaick2013,
   author  = {Oliver van Kaick and Kai Xu and Hao Zhang and Yanzhen Wang and Shuyang Sun and Ariel Shamir and Daniel Cohen-Or},
@@ -1888,6 +1888,7 @@
   number  = {4}
 }
 
+
 @article{Kalantari2015,
   author  = {Kalantari, Nima Khademi and Bako, Steve and Sen, Pradeep},
   title   = {A machine learning approach for filtering {Monte Carlo} noise},
@@ -1896,6 +1897,7 @@
   volume  = {34},
   number  = {4}
 }
+
 
 @article{Kalogerakis2010,
   author  = {Kalogerakis, Evangelos and Hertzmann, Aaron and Singh, Karan},
@@ -1943,14 +1945,12 @@
   year      = {2019}
 }
 
-
 @inproceedings{Karras2020,
   title     = {Analyzing and Improving the Image Quality of {StyleGAN}},
   author    = {Tero Karras and Samuli Laine and Miika Aittala and Janne Hellsten and Jaakko Lehtinen and Timo Aila},
   booktitle = CVPR,
   year      = {2020}
 }
-
 
 @article{Karras2021,
   author  = {Tero Karras and Miika Aittala and Samuli Laine and Erik H\"{a}rk\"{o}nen and Janne Hellsten and Jaakko Lehtinen and Timo Aila},
@@ -1959,12 +1959,14 @@
   year    = {2021}
 }
 
+
 @inproceedings{Kato2018,
   author    = {Kato, Hiroharu and Ushiku, Yoshitaka and Harada, Tatsuya},
   title     = {Neural {3D} Mesh Renderer},
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @inproceedings{Kazhdan2003,
   title     = {Rotation invariant spherical harmonic representation of {3D} shape descriptors},
@@ -2110,7 +2112,6 @@
   year      = {2013}
 }
 
-
 @incollection{Krasnogor2004,
   author    = {N. Krasnogor},
   title     = {Towards robust memetic algorithms},
@@ -2127,6 +2128,7 @@
   volume  = {32},
   number  = {4}
 }
+
 
 @book{Laga2018,
   author    = {Hamid Laga and Yulan Guo and Hedi Tabia and Robert B. Fisher and Mohammed Bennamoun},
@@ -2508,7 +2510,6 @@
   year      = {1989}
 }
 
-
 @article{Lu2016,
   author  = {Xuequan Lu and Zhigang Deng and and Wenzhi Chen},
   title   = {A robust scheme for feature-preserving mesh denoising},
@@ -2518,7 +2519,6 @@
   number  = {3}
 }
 
-
 @inproceedings{Lun2017,
   author    = {Zhaoliang Lun and Matheus Gadelha and Evangelos Kalogerakis and Subhransu Maji and Rui Wang},
   title     = {{3D} shape reconstruction from sketches via multi-view convolutional networks},
@@ -2526,12 +2526,14 @@
   year      = {2017}
 }
 
+
 @article{Lun2017a,
   author  = {Lun, Zhaoliang and Gadelha, Matheus and Kalogerakis, Evangelos and Maji, Subhransu and Wang, Rui},
   title   = {{3D} shape reconstruction from sketches via multi-view convolutional networks},
   journal = ThreeDV,
   year    = {2017}
 }
+
 
 @inproceedings{Lyu2020,
   author    = {Yecheng Lyu and Xinming Huang and Ziming Zhang},
@@ -2585,7 +2587,6 @@
   year      = {2021}
 }
 
-
 @article{Martel2021,
   title   = {{ACORN}: {Adaptive} coordinate networks for neural scene representation},
   author  = {Julien N. P. Martel and David B. Lindell and Connor Z. Lin and Eric R. Chan and Marco Monteiro and Gordon Wetzstein},
@@ -2595,6 +2596,13 @@
   year    = {2021}
 }
 
+@inproceedings{Martinek2012,
+  booktitle = {Vision, Modeling and Visualization},
+  title     = {{3D} Shape Matching based on Geodesic Distance Distributions},
+  author    = {Martinek, Michael and Ferstl, Matthias and Grosso, Roberto},
+  year      = {2012}
+}
+
 
 @inproceedings{Masci2015,
   author    = {Jonathan Masci and Davide Boscaini and Michael M. Bronstein and Pierre Vandergheynst},
@@ -2602,6 +2610,7 @@
   booktitle = ICCV,
   year      = {2015}
 }
+
 
 @inproceedings{Maturana2015,
   author    = {Maturana, Daniel and Scherer, Sebastian},
@@ -2617,7 +2626,6 @@
   year    = {1982},
   volume  = {19}
 }
-
 
 @article{Mehra2009,
   author  = {Ravish Mehra and Qingnan Zhou and Jeremy Long and Alla Sheffer and Amy Gooch and Niloy J. Mitra},
@@ -2638,6 +2646,7 @@
   year    = {2001}
 }
 
+
 @article{Memoli2005,
   title   = {Distance Functions and Geodesics on Submanifolds of {$R^d$} and Point Clouds},
   author  = {M{\'e}moli, Facundo and Sapiro, Guillermo},
@@ -2654,7 +2663,6 @@
   year      = {2019}
 }
 
-
 @inproceedings{Mildenhall2020,
   title     = {{NeRF}: Representing scenes as neural radiance fields for view synthesis},
   author    = {Mildenhall, Ben and Srinivasan, Pratul P and Tancik, Matthew and Barron, Jonathan T and Ramamoorthi, Ravi and Ng, Ren},
@@ -2662,13 +2670,13 @@
   year      = {2020}
 }
 
+
 @inproceedings{Misra2021,
   title     = {An End-to-End Transformer Model for {3D} Object Detection},
   author    = {Misra, Ishan and Girdhar, Rohit and Joulin, Armand},
   booktitle = ICCV,
   year      = {2021}
 }
-
 
 @article{Mitchell1987,
   author  = {Mitchell, Joseph S. B. and Mount, David M. and Papadimitriou, Christos H.},
@@ -2687,13 +2695,13 @@
   year      = {2014}
 }
 
+
 @misc{mmdet3d2020,
   title        = {{MMDetection3D: OpenMMLab} next-generation platform for general {3D} object detection},
   author       = {MMDetection3D Contributors},
   howpublished = {\url{https://github.com/open-mmlab/mmdetection3d}},
   year         = {2020}
 }
-
 
 @inproceedings{Mo2019,
   author    = {Mo, Kaichun and Zhu, Shilin and Chang, Angel X and Yi, Li and Tripathi, Subarna and Guibas, Leonidas J. and Su, Hao},
@@ -2709,6 +2717,7 @@
   booktitle = CVPR,
   year      = 2017
 }
+
 
 @article{Moon2014,
   author  = {Moon, Bochang and Carr, Nathan and Yoon, Sung-Eui},
@@ -3084,7 +3093,6 @@
   year      = {2015}
 }
 
-
 @article{Ren2017,
   author  = {Ren, Mengwei and Niu, Liang and Fang, Yi},
   journal = {arXiv preprint arXiv:1711.10108},
@@ -3099,6 +3107,7 @@
   booktitle = ECCV,
   year      = {2018}
 }
+
 
 @article{Reuter2010,
   author  = {Reuter, Martin},
@@ -3116,7 +3125,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Riegler2017a,
   author    = {Riegler, Gernot and Ulusoy, Ali Osman and Bischof, Horst and Geiger, Andreas},
   title     = {{OctNetFusion}: Learning depth fusion from data},
@@ -3131,6 +3139,7 @@
   title     = {{U-Net}: Convolutional networks for biomedical image segmentation},
   year      = {2015}
 }
+
 
 @inproceedings{Roufosse2019,
   author    = {Jean-Michel Roufosse and Abhishek Sharma and Maks Ovsjanikov},
@@ -3242,6 +3251,13 @@
   title     = {Interleaved regression tree field cascades for blind image deconvolution},
   booktitle = {Applications of Computer Vision (WACV)},
   year      = {2015}
+}
+
+@inproceedings{Schmidt2006,
+  author    = {Schmidt, Ryan and Grimm, Cindy and Wyvill, Brian},
+  title     = {Interactive Decal Compositing with Discrete Exponential Maps},
+  year      = {2006},
+  booktitle = {SIGGRAPH}
 }
 
 @article{Schmidt2016,
