--- a/reference.bib
+++ b/reference.bib
@@ -28,7 +28,6 @@
 @String { TPAMI    = {IEEE Trans. Pattern Anal. Mach. Intell.} }
 @String { TVCG     = {IEEE. T. Vis. Comput. Gr.} }
 
-
 @inproceedings{Achlioptas2018,
   author    = {Panos Achlioptas and Olga Diamanti and Ioannis Mitliagkas and Leonidas J. Guibas},
   title     = {Learning representations and generative models for {3D} point clouds},
@@ -45,7 +44,6 @@
   volume  = {28},
   number  = {3}
 }
-
 
 @article{Adams2010,
   author  = {Adams, Andrew and Baek, Jongmin and Davis, Myers Abraham},
@@ -82,6 +80,7 @@
   year      = {2018}
 }
 
+
 @inproceedings{Alayrac2020,
   title     = {Self-Supervised MultiModal Versatile Networks},
   author    = {Alayrac, Jean-Baptiste and Recasens, Adria and Schneider, Rosalia and Arandjelovic, Relja and Ramapuram, Jason and De Fauw, Jeffrey and Smaira, Lucas and Dieleman, Sander and Zisserman, Andrew},
@@ -99,14 +98,13 @@
   number  = {12}
 }
 
-
-
 @inproceedings{Andersen2009,
   author    = {Andersen, Vedrana and Desbrun, Mathieu and B{\ae}rentzen, J. Andreas and Aan{\ae}s, Henrik},
   title     = {Height and tilt geometric texture},
   booktitle = {Proc. of the 5th International Symposium on Advances in Visual Computing: Part I},
   year      = {2009}
 }
+
 
 @inproceedings{Ankerst1999,
   author    = {Ankerst, Mihael and Kastenm{\"u}ller, Gabiand Kriegel, Hans-Peter and Seidl, Thomas},
@@ -116,13 +114,13 @@
 }
 
 
+
 @inproceedings{Aoki2019,
   author    = {Aoki, Yasuhiro and Goforth, Hunter and Arun Srivatsan, Rangaprasad and Lucey, Simon},
   booktitle = CVPR,
   title     = {{PointNetLK}: Robust \& Efficient Point Cloud Registration Using PointNet},
   year      = {2019}
 }
-
 
 @inproceedings{Armeni2016,
   title     = {{3D} Semantic Parsing of Large-Scale Indoor Spaces},
@@ -139,12 +137,14 @@
   year    = {2017}
 }
 
+
 @inproceedings{Arsalan2017,
   title     = {Synthesizing {3D} shapes via modeling multi-view depth maps and silhouettes with deep generative networks},
   author    = {Arsalan Soltani, Amir and Huang, Haibin and Wu, Jiajun and Kulkarni, Tejas D and Tenenbaum, Joshua B},
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @inproceedings{Arthur2007,
   author    = {Arthur, David and Vassilvitskii, Sergei},
@@ -162,7 +162,6 @@
   number  = {2}
 }
 
-
 @article{Atzmon2018,
   author  = {Atzmon, Matan and Maron, Haggai and Lipman, Yaron},
   title   = {Point Convolutional Neural Networks by Extension Operators},
@@ -171,7 +170,6 @@
   number  = {4},
   journal = SIG
 }
-
 
 @inproceedings{Atzmon2020,
   title     = {{SAL}: Sign agnostic learning of shapes from raw data},
@@ -198,6 +196,7 @@
   number  = {7}
 }
 
+
 @inproceedings{Aubry2011,
   author    = {Aubry, Mathieu and Schlickewei, Ulrich and Cremers, Daniel},
   booktitle = {ICCV Workshop},
@@ -215,17 +214,12 @@
   year    = {2016}
 }
 
-
-
-  
 @article{Ba2016,
   title   = {Layer normalization},
   author  = {Ba, Jimmy Lei and Kiros, Jamie Ryan and Hinton, Geoffrey E},
   journal = {arXiv preprint arXiv:1607.06450},
   year    = {2016}
 }
-
-
 
 
 @article{Badrinarayanan2017,
@@ -239,11 +233,15 @@
 
 
 
+  
 @book{Baerentzen2002,
   title     = {Manipulation of volumetric solids with applications to sculpting},
   author    = {B{\ae}rentzen, J Andreas},
   publisher = {Citeseer}
 }
+
+
+
 
 @inproceedings{Bai2016,
   author    = {Song Bai and Xiang Bai and Zhichao Zhou and Zhaoxiang Zhang and Longin Jan Latecki},
@@ -251,6 +249,7 @@
   booktitle = CVPR,
   year      = {2016}
 }
+
 
 
 @inproceedings{Bai2021,
@@ -268,7 +267,6 @@
   number  = {4},
   journal = SIG
 }
-
 
 
 @article{Bailey2020,
@@ -289,6 +287,8 @@
   number  = {1}
 }
 
+
+
 @article{Battaglia2018,
   title   = {Relational inductive biases, deep learning, and graph networks},
   author  = {Battaglia, Peter W and Hamrick, Jessica B and Bapst, Victor and Sanchez-Gonzalez, Alvaro and Zambaldi, Vinicius and Malinowski, Mateusz and Tacchetti, Andrea and Raposo, David and Santoro, Adam and Faulkner, Ryan and others},
@@ -303,8 +303,6 @@
   year      = {2019}
 }
 
-
-
 @article{Belongie2002,
   title   = {Shape matching and object recognition using shape contexts},
   author  = {Belongie, Serge and Malik, Jitendra and Puzicha, Jan},
@@ -313,14 +311,13 @@
   year    = {2002}
 }
 
-
-
 @inproceedings{Bendels2003,
   author    = {Bendels, G. H. and Klein, R.},
   title     = {Mesh Forging: Editing of {3D}-Meshes Using Implicitly Defined Occluders},
   year      = {2003},
   booktitle = {SGP}
 }
+
 
 
 @article{Bengio2013,
@@ -352,6 +349,7 @@
   number  = {4},
   year    = {1999}
 }
+
 
 
 @article{Besl1992,
@@ -390,7 +388,6 @@
 }
 
 
-
 @article{Bommes2013,
   author  = {Bommes, David and Campen, Marcel and Ebke, Hans-Christian and Alliez, Pierre and Kobbelt, Leif},
   title   = {Integer-grid maps for reliable quad meshing},
@@ -400,6 +397,7 @@
   number  = {4}
 }
 
+
 @article{Bommes2013a,
   author  = {Bommes, David and L\'{e}vy, Bruno and Pietroni, Nico and Puppo, Enrico and Silva, Claudio and Tarini, Marco and Zorin, Denis},
   title   = {Quad-mesh generation and processing: a survey},
@@ -408,6 +406,8 @@
   volume  = {32},
   number  = {6}
 }
+
+
 
 @article{Boscaini2015,
   author  = {Boscaini, Davide and Masci, Jonathan and Melzi, Simone and Bronstein, Michael M and Castellani, Umberto and Vandergheynst, Pierre},
@@ -425,7 +425,6 @@
   year      = {2016}
 }
 
-
 @article{Botsch2008,
   author  = {Botsch, Mario and Sorkine, Olga},
   title   = {On linear variational surface deformation methods},
@@ -434,7 +433,6 @@
   volume  = {14},
   number  = {1}
 }
-
 
 @book{Botsch2010,
   author    = {Mario Botsch and Leif Kobbelt and Mark Pauly and Pierre Alliez and Bruno L\'{e}vy},
@@ -461,6 +459,7 @@
   year      = {2011}
 }
 
+
 @book{Bridson2015,
   title     = {Fluid simulation for computer graphics},
   author    = {Bridson, Robert},
@@ -475,7 +474,6 @@
   booktitle = {3D deep learning workshop (NeurIPS)},
   year      = {2016}
 }
-
 
 @inproceedings{Brody2022,
   title     = {How Attentive are Graph Attention Networks? },
@@ -547,6 +545,7 @@
   number  = {4}
 }
 
+
 @inproceedings{Cao2018,
   author    = {Cao, Yan-Pei and Liu, Zheng-Ning and Kuang, Zheng-Fei and Kobbelt, Leif and Hu, Shi-Min},
   title     = {Learning to reconstruct high-quality {3D} shapes with cascaded fully convolutional networks},
@@ -561,7 +560,6 @@
   booktitle = ECCV,
   year      = {2018}
 }
-
 
 @article{Carroll1998,
   title     = {Multidimensional scaling},
@@ -825,6 +823,7 @@
   volume  = {23}
 }
 
+
 @article{Coifman2005,
   title   = {Geometric diffusions as a tool for harmonic analysis and structure definition of data: Diffusion maps},
   author  = {Coifman, Ronald R and Lafon, Stephane and Lee, Ann B and Maggioni, Mauro and Nadler, Boaz and Warner, Frederick and Zucker, Steven W},
@@ -840,7 +839,6 @@
   title  = {{Data-driven science --- Wikipedia{,}} The Free Encyclopedia},
   year   = {2018}
 }
-
 
 @inproceedings{Cordonnier2020,
   title     = {On the relationship between self-attention and convolutional layers},
@@ -859,6 +857,7 @@
   number  = {3}
 }
 
+
 @inproceedings{Crane2013,
   author    = {Keenan Crane and Fernando de Goes and Mathieu Desbrun and Peter Schr\"{o}der},
   title     = {Digital geometry processing with discrete exterior calculus},
@@ -874,6 +873,15 @@
   volume  = {32},
   number  = {5},
   year    = {2013}
+}
+
+@article{Crane2017,
+  author  = {Crane, Keenan and Weischedel, Clarisse and Wardetzky, Max},
+  title   = {The Heat Method for Distance Computation},
+  journal = {Commun. ACM},
+  volume  = {60},
+  number  = {11},
+  year    = {2017}
 }
 
 
@@ -926,13 +934,13 @@
   year      = {2017}
 }
 
+
 @inproceedings{Dai2018,
   author    = {Dai, Angela and Ritchie, Daniel and Bokeloh, Martin and Reed, Scott and Sturm, J{\"u}rgen and Nie{\ss}ner, Matthias},
   title     = {{ScanComplete}: Large-Scale Scene Completion and Semantic Segmentation for {3D} Scans},
   booktitle = CVPR,
   year      = {2018}
 }
-
 
 @inproceedings{Dai2018a,
   title     = {{3DMV}: Joint {3D}-multi-view prediction for {3D} semantic scene segmentation},
@@ -951,6 +959,7 @@
   number  = {1}
 }
 
+
 @inproceedings{Deng2009,
   author    = {Jia Deng and Wei Dong and Richard Socher and Jia Li and Kai Li and Li Fei-Fei},
   title     = {{ImageNet}: A large-scale hierarchical image database},
@@ -965,7 +974,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Desbrun1999,
   author    = {Desbrun, Mathieu and Meyer, Mark and Schr\"{o}der, Peter and Barr, Alan H.},
   title     = {Implicit fairing of irregular meshes using diffusion and curvature flow},
@@ -973,13 +981,13 @@
   year      = {1999}
 }
 
+
 @article{Devlin2018,
   author  = {Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
   journal = {arXiv preprint arXiv:1810.04805},
   title   = {{BERT}: Pre-training of deep bidirectional transformers for language understanding},
   year    = {2018}
 }
-
 
 @article{Diebel2006,
   author  = {Diebel, James R. and Thrun, Sebastian and Br\"{u}nig, Michael},
@@ -989,6 +997,7 @@
   volume  = {25},
   number  = {1}
 }
+
 
 @inproceedings{Doersch2015,
   author    = {Doersch, Carl and Gupta, Abhinav and Efros, Alexei A},
@@ -1005,7 +1014,6 @@
   publiser  = {IEEE}
 }
 
-
 @inproceedings{Dong2022,
   title     = {{CSWin Transformer}: A general vision transformer backbone with cross-shaped windows},
   author    = {Dong, Xiaoyi and Bao, Jianmin and Chen, Dongdong and Zhang, Weiming and Yu, Nenghai and Yuan, Lu and Chen, Dong and Guo, Baining},
@@ -1020,6 +1028,7 @@
   booktitle = NeurIPS,
   year      = {2014}
 }
+
 
 @inproceedings{Dosovitskiy2021,
   title     = {An image is worth 16x16 words: Transformers for image recognition at scale},
@@ -1111,13 +1120,13 @@
   year      = {2017}
 }
 
-
 @inproceedings{Fan2022,
   title     = {Embracing single stride {3D} object detector with sparse transformer},
   author    = {Fan, Lue and Pang, Ziqi and Zhang, Tianyuan and Wang, Yu-Xiong and Zhao, Hang and Wang, Feng and Wang, Naiyan and Zhang, Zhaoxiang},
   booktitle = CVPR,
   year      = {2022}
 }
+
 
 @inproceedings{Fanello2014,
   author    = {Fanello, S.R. and Keskin, C. and Kohli, P. and Izadi, S. and Shotton, J. and Criminisi, A. and Pattacini, U. and Paek, T.},
@@ -1126,13 +1135,13 @@
   year      = {2014}
 }
 
-
 @inproceedings{Feng2019,
   title     = {{MeshNet}: Mesh Neural Network for {3D} Shape Representation},
   author    = {Feng, Yutong and Feng, Yifan and You, Haoxuan and Zhao, Xibin and Gao, Yue},
   booktitle = AAAI,
   year      = {2019}
 }
+
 
 @inproceedings{Fey2018,
   title     = {{SplineCNN}: Fast Geometric Deep Learning with Continuous {B}-Spline Kernels},
@@ -1187,13 +1196,13 @@
   year      = {2022}
 }
 
-
 @inproceedings{Frisken2000,
   author    = {Frisken, Sarah F. and Perry, Ronald N. and Rockwood, Alyn P. and Jones, Thouis R.},
   title     = {Adaptively sampled distance fields: A general representation of shape for computer graphics},
   booktitle = {SIGGRAPH},
   year      = {2000}
 }
+
 
 @article{Fuhrmann2014,
   author  = {Fuhrmann, Simon and Goesele, Michael},
@@ -1219,13 +1228,13 @@
   year      = {2018}
 }
 
-
 @inproceedings{GarciaGarcia2016,
   author    = {A. Garcia-Garcia and F. Gomez-Donoso and J. Garcia-Rodriguez and S. Orts-Escolano and M. Cazorla and J. Azorin-Lopez},
   booktitle = {2016 International Joint Conference on Neural Networks (IJCNN)},
   title     = {{PointNet}: A {3D} convolutional neural network for real-time object class recognition},
   year      = {2016}
 }
+
 
 @inproceedings{Garland1997,
   title     = {Surface simplification using quadric error metrics},
@@ -1392,7 +1401,6 @@
   year      = {2018}
 }
 
-
 @misc{Guo2019,
   author        = {Yulan Guo and Hanyun Wang and Qingyong Hu and Hao Liu and Li Liu and Mohammed Bennamoun},
   title         = {Deep learning for {3D} point clouds: A survey},
@@ -1401,6 +1409,7 @@
   eprint        = {1912.12033},
   primaryclass  = {cs.CV}
 }
+
 
 @article{Guo2021,
   title   = {{PCT}: Point cloud transformer},
@@ -1439,14 +1448,13 @@
   year      = {2020}
 }
 
-
-
 @inproceedings{Ha2017,
   title     = {{HyperNetworks}},
   author    = {Ha, David and Dai, Andrew and Le, Quoc V},
   booktitle = ICLR,
   year      = {2017}
 }
+
 
 
 @inproceedings{Hadsell2006,
@@ -1456,13 +1464,13 @@
   year      = 2006
 }
 
+
 @inproceedings{Haene2017,
   author    = {Christian H{\"a}ne and Shubham Tulsiani and Jitendra Malik},
   booktitle = threeDV,
   title     = {Hierarchical surface prediction for {3D} object reconstruction},
   year      = {2017}
 }
-
 
 @inproceedings{Hamilton2017,
   author    = {Hamilton, Will and Ying, Zhitao and Leskovec, Jure},
@@ -1478,6 +1486,7 @@
   booktitle = ICCV,
   year      = {2017}
 }
+
 
 @article{Han2017a,
   author  = {Han, Xiaoguang and Gao, Chang and Yu, Yizhou},
@@ -1497,7 +1506,6 @@
   volume  = {28}
 }
 
-
 @inproceedings{Handa2015,
   title     = {{SceneNet}: Understanding Real World Indoor Scenes With Synthetic Data},
   author    = {Ankur Handa and Viorica Patraucean and Vijay Badrinarayanan and Simon Stent and Roberto Cipolla},
@@ -1514,6 +1522,7 @@
   number  = {4},
   volume  = {38}
 }
+
 
 @article{Hanocka2020,
   author  = {Hanocka, Rana and Metzer, Gal and Giryes, Raja and Cohen-Or, Daniel},
@@ -1730,7 +1739,6 @@
   year    = {2018}
 }
 
-
 @article{Ioannidou2017,
   author    = {Ioannidou, Anastasia and Chatzilari, Elisavet and Nikolopoulos, Spiros and Kompatsiaris, Ioannis},
   title     = {Deep learning advances in computer vision with {3D} data: A survey},
@@ -1756,6 +1764,7 @@
   booktitle = NeurIPS,
   year      = {2018}
 }
+
 
 @inproceedings{Jampani2016,
   author    = {Jampani, Varun and Kiefel, Martin and Gehler, Peter V.},
@@ -1888,7 +1897,6 @@
   number  = {4}
 }
 
-
 @article{Kalantari2015,
   author  = {Kalantari, Nima Khademi and Bako, Steve and Sen, Pradeep},
   title   = {A machine learning approach for filtering {Monte Carlo} noise},
@@ -1907,6 +1915,7 @@
   volume  = {29},
   number  = {4}
 }
+
 
 @inproceedings{Kalogerakis2017,
   author    = {Kalogerakis, Evangelos and Averkiou, Melinos and Maji, Subhransu and Chaudhuri, Siddhartha},
@@ -1959,7 +1968,6 @@
   year    = {2021}
 }
 
-
 @inproceedings{Kato2018,
   author    = {Kato, Hiroharu and Ushiku, Yoshitaka and Harada, Tatsuya},
   title     = {Neural {3D} Mesh Renderer},
@@ -1975,6 +1983,7 @@
   volume    = {6},
   year      = {2003}
 }
+
 
 @inproceedings{Kazhdan2006,
   author    = {Kazhdan, Michael and Bolitho, Matthew and Hoppe, Hugues},
@@ -2129,13 +2138,13 @@
   number  = {4}
 }
 
-
 @book{Laga2018,
   author    = {Hamid Laga and Yulan Guo and Hedi Tabia and Robert B. Fisher and Mohammed Bennamoun},
   publisher = {Wiley},
   title     = {{3D} Shape Analysis: Fundamentals, Theory, and Applications},
   year      = {2018}
 }
+
 
 @inproceedings{Lai2005,
   author    = {Lai, Y.-K. and Hu, S.-M. and Gu, D. X. and Martin, R. R.},
@@ -2526,7 +2535,6 @@
   year      = {2017}
 }
 
-
 @article{Lun2017a,
   author  = {Lun, Zhaoliang and Gadelha, Matheus and Kalogerakis, Evangelos and Maji, Subhransu and Wang, Rui},
   title   = {{3D} shape reconstruction from sketches via multi-view convolutional networks},
@@ -2541,6 +2549,7 @@
   booktitle = CVPR,
   year      = {2020}
 }
+
 
 @inproceedings{Ma2022,
   title     = {Rethinking network design and local geometry in point cloud: A simple residual {MLP} framework},
@@ -2603,7 +2612,6 @@
   year      = {2012}
 }
 
-
 @inproceedings{Masci2015,
   author    = {Jonathan Masci and Davide Boscaini and Michael M. Bronstein and Pierre Vandergheynst},
   title     = {Geodesic convolutional neural networks on Riemannian manifolds},
@@ -2618,6 +2626,7 @@
   booktitle = IROS,
   year      = {2015}
 }
+
 
 @article{Meagher1982,
   author  = {Donald Meagher},
@@ -2635,7 +2644,6 @@
   volume  = {28},
   number  = {5}
 }
-
 
 @article{Memoli2001,
   title   = {Fast computation of weighted distance functions and geodesics on implicit hyper-surfaces},
@@ -2656,6 +2664,7 @@
   year    = {2005}
 }
 
+
 @inproceedings{Mescheder2019,
   title     = {Occupancy networks: Learning {3D} reconstruction in function space},
   author    = {Mescheder, Lars and Oechsle, Michael and Niemeyer, Michael and Nowozin, Sebastian and Geiger, Andreas},
@@ -2670,13 +2679,13 @@
   year      = {2020}
 }
 
-
 @inproceedings{Misra2021,
   title     = {An End-to-End Transformer Model for {3D} Object Detection},
   author    = {Misra, Ishan and Girdhar, Rohit and Joulin, Armand},
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @article{Mitchell1987,
   author  = {Mitchell, Joseph S. B. and Mount, David M. and Papadimitriou, Christos H.},
@@ -2686,7 +2695,6 @@
   journal = {SIAM Journal on Computing},
   year    = {1987}
 }
-
 
 @inproceedings{Mitra2014,
   author    = {Mitra, Niloy J. and Wand, Michael and Zhang, Hao (Richard) and Cohen-Or, Daniel and Kim, Vladimir and Huang, Qi-Xing},
@@ -2703,13 +2711,13 @@
   year         = {2020}
 }
 
+
 @inproceedings{Mo2019,
   author    = {Mo, Kaichun and Zhu, Shilin and Chang, Angel X and Yi, Li and Tripathi, Subarna and Guibas, Leonidas J. and Su, Hao},
   title     = {{PartNet}: A Large-scale Benchmark for Fine-grained and Hierarchical Part-level {3D} Object Understanding},
   booktitle = CVPR,
   year      = {2019}
 }
-
 
 @inproceedings{Monti2017,
   author    = {Federico Monti and Davide Boscaini and Jonathan Masci and Emanuele Rodol\`{a} and Jan Svoboda and Michael M. Bronstein},
@@ -2727,6 +2735,7 @@
   volume  = {33},
   number  = {5}
 }
+
 
 @article{Moon2015,
   author  = {Moon, Bochang and Iglesias-Guitian, Jose A. and Yoon, Sung-Eui and Mitchell, Kenny},
@@ -3100,7 +3109,6 @@
   year    = {2017}
 }
 
-
 @inproceedings{Rethage2018,
   author    = {Rethage, Dario and Wald, Johanna and Sturm, Jurgen and Navab, Nassir and Tombari, Federico},
   title     = {Fully-Convolutional Point Networks for Large-Scale Point Clouds},
@@ -3118,6 +3126,7 @@
   number  = {2-3}
 }
 
+
 @inproceedings{Riegler2017,
   author    = {Gernot Riegler and Ali Osman Ulusoy and Andreas Geiger},
   title     = {{OctNet}: Learning deep {3D} representations at high resolutions},
@@ -3131,7 +3140,6 @@
   booktitle = threeDV,
   year      = {2017}
 }
-
 
 @inproceedings{Ronneberger2015,
   author    = {Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas},
@@ -3147,6 +3155,7 @@
   booktitle = ICCV,
   year      = 2019
 }
+
 
 @article{Rousseeuw1987,
   author  = {Peter J. Rousseeuw},
@@ -3294,7 +3303,6 @@
   number  = {6}
 }
 
-
 @article{Shao2018,
   title   = {{H-CNN}: spatial hashing based {CNN} for {3D} shape analysis},
   author  = {Shao, Tianjia and Yang, Yin and Weng, Yanlin and Hou, Qiming and Zhou, Kun},
@@ -3312,6 +3320,7 @@
   number  = {4}
 }
 
+
 @article{Shapira2010,
   title   = {Contextual part analogies in {3D} objects},
   author  = {Shapira, Lior and Shalom, Shy and Shamir, Ariel and Cohen-Or, Daniel and Zhang, Hao},
@@ -3319,7 +3328,6 @@
   volume  = {89},
   year    = {2010}
 }
-
 
 @article{Sharf2004,
   author  = {Sharf, Andrei and Alexa, Marc and Cohen-Or, Daniel},
@@ -3339,6 +3347,7 @@
   number  = {3},
   year    = {2007}
 }
+
 
 @inproceedings{Sharma2016,
   title     = {{VConv-DAE}: Deep volumetric shape learning without object labels},
@@ -3388,7 +3397,6 @@
   number  = {6}
 }
 
-
 @article{Shi2006,
   author  = {Shi, Lin and Yu, Yizhou and Bell, Nathan and Feng, Wei-Wen},
   title   = {A fast multigrid algorithm for mesh deformation},
@@ -3406,13 +3414,13 @@
   year    = {2015}
 }
 
+
 @article{Shi2021,
   title   = {Multi-dataset Pretraining: A Unified Model for Semantic Segmentation},
   author  = {Shi, Bowen and Zhang, Xiaopeng and Xu, Haohang and Dai, Wenrui and Zou, Junni and Xiong, Hongkai and Tian, Qi},
   journal = {arXiv preprint arXiv:2106.04121},
   year    = {2021}
 }
-
 
 @article{Shoef2019,
   author  = {Shoef, Matan and Fogel, Sharon and Cohen-Or, Daniel},
@@ -3429,6 +3437,7 @@
   year    = {2016},
   volume  = {43}
 }
+
 
 @article{Sidi2011,
   author  = {Oana Sidi and Oliver van Kaick and Yanir Kleiman and Hao Zhang and Daniel Cohen-Or},
@@ -3488,7 +3497,6 @@
   year      = {2020}
 }
 
-
 @misc{Smith2017,
   author       = {Edward Smith and David Meger},
   title        = {Improved adversarial systems for {3D} object generation and reconstruction},
@@ -3496,13 +3504,13 @@
   year         = {2017}
 }
 
+
 @unpublished{Solomon2014,
   author = {Solomon, Justin and Crane, Keenan and Butscher, Adrian and Wojtan, Chris},
   title  = {A general framework for bilateral and mean shift filtering},
   note   = {arXiv:1405.4734 [cs.GR]},
   year   = {2014}
 }
-
 
 @article{Solomon2014a,
   title   = {Earth mover's distances on discrete surfaces},
@@ -3520,6 +3528,7 @@
   booktitle = CVPR,
   year      = {2015}
 }
+
 
 @inproceedings{Song2017,
   author    = {Song, Shuran and Yu, Fisher and Zeng, Andy and Chang, Angel X and Savva, Manolis and Funkhouser, Thomas},
@@ -3566,7 +3575,6 @@
   year      = {2015}
 }
 
-
 @inproceedings{Su2018,
   author    = {Hang Su and Varun Jampani and Deqing Sun and Subhransu Maji and Evangelos Kalogerakis and Ming-Hsuan Yang and Jan Kautz},
   title     = {{SPLATNet}: Sparse lattice networks for point cloud processing},
@@ -3574,13 +3582,13 @@
   year      = {2018}
 }
 
+
 @inproceedings{Su2019,
   title     = {{VL-BERT}: Pre-training of generic visual-linguistic representations},
   author    = {Su, Weijie and Zhu, Xizhou and Cao, Yue and Li, Bin and Lu, Lewei and Wei, Furu and Dai, Jifeng},
   booktitle = ICLR,
   year      = {2020}
 }
-
 
 @article{Subr2009,
   author  = {Subr, Kartic and Soler, Cyril and Durand, Fr{\'e}do},
@@ -3600,6 +3608,7 @@
   volume  = {13},
   number  = {5}
 }
+
 
 @article{Sun2008,
   author  = {Sun, Xin and Zhou, Kun and Stollnitz, Eric and Shi, Jiaoying and Guo, Baining},
@@ -3661,7 +3670,6 @@
   year    = {2005}
 }
 
-
 @article{Tagliasacchi2011,
   author  = {Tagliasacchi, Andrea and Olson, Matt and Zhang, Hao and Hamarneh, Ghassan and Cohen-Or, Daniel},
   title   = {{VASE}: Volume-Aware Surface Evolution for Surface Reconstruction from Incomplete Point Clouds},
@@ -3678,6 +3686,7 @@
   year      = {2021},
   booktitle = CVPR
 }
+
 
 @article{Tan2019,
   title   = {{LXMERT}: Learning cross-modality encoder representations from transformers},
@@ -3741,7 +3750,6 @@
   number  = {3}
 }
 
-
 @inproceedings{Tasdizen2002,
   author    = {Tasdizen, Tolga and Whitaker, Ross and Burchard, Paul and Osher, Stanley},
   title     = {Geometric surface smoothing via anisotropic diffusion of normals},
@@ -3756,6 +3764,7 @@
   booktitle = ECCV,
   year      = {2016}
 }
+
 
 @inproceedings{Tatarchenko2017,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
@@ -3799,7 +3808,6 @@
   year      = {1998}
 }
 
-
 @article{Tsitsiklis1995,
   title   = {Efficient algorithms for globally optimal trajectories},
   author  = {Tsitsiklis, John N.},
@@ -3808,6 +3816,7 @@
   number  = {9},
   year    = {1995}
 }
+
 
 @inproceedings{Tulsiani2017,
   author    = {Tulsiani, Shubham and Zhou, Tinghui and Efros, Alexei A and Malik, Jitendra},
@@ -3823,7 +3832,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Uhrig2017,
   author    = {Jonas Uhrig and Nick Schneider and Lukas Schneider and Thomas Brox and Andreas Geiger},
   title     = {Sparsity invariant {CNNs}},
@@ -3838,6 +3846,7 @@
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @inproceedings{Ummenhofer2021,
   title     = {Adaptive Surface Reconstruction With Multiscale Convolutional Kernels},
@@ -3855,7 +3864,6 @@
   number  = {2}
 }
 
-
 @inproceedings{Vaswani2017,
   author    = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
   title     = {Attention is all you need},
@@ -3872,6 +3880,7 @@
   number  = {20},
   year    = {2017}
 }
+
 
 @inproceedings{Velickovic2018,
   title     = {Graph Attention Networks},
@@ -3894,7 +3903,6 @@
   booktitle = ICCV
 }
 
-
 @article{Wang2012,
   author  = {Jun Wang and Xi Zhang and Zeyun Yu},
   title   = {A cascaded approach for feature-preserving surface mesh denoising},
@@ -3913,6 +3921,7 @@
   volume  = {33},
   number  = {2}
 }
+
 
 @article{Wang2015,
   author  = {Wang, Peng-Shuai and Fu, Xiao-Ming and Liu, Yang and Tong, Xin and Liu, Shi-Lin and Guo, Baining},
@@ -4147,7 +4156,6 @@
   year      = {2021}
 }
 
-
 @inproceedings{Williams2022,
   title     = {Neural Fields as Learnable Kernels for {3D} Reconstruction},
   author    = {Williams, Francis and Gojcic, Zan and Khamis, Sameh and Zorin, Denis and Bruna, Joan and Fidler, Sanja and Litany, Or},
@@ -4164,6 +4172,7 @@
   volume  = {24},
   number  = {3}
 }
+
 
 @inproceedings{Wu2015,
   author    = {Wu, Zhirong and Song, Shuran and Khosla, Aditya and Yu, Fisher and Zhang, Linguang and Tang, Xiaoou and Xiao, Jianxiong},
@@ -4225,13 +4234,13 @@
   number  = {4}
 }
 
-
 @inproceedings{Wu2019a,
   author    = {Wenxuan Wu and Zhongang Qi and Li Fuxin},
   booktitle = CVPR,
   title     = {{PointConv}: Deep Convolutional Networks on {3D} Point Clouds},
   year      = {2019}
 }
+
 
 @article{Wu2020,
   title   = {A comprehensive survey on graph neural networks},
@@ -4270,7 +4279,6 @@
   year      = {2021}
 }
 
-
 @article{Xie2015,
   author  = {Xie, Zhige and Xu, Kai and Shan, Wen and Liu, Ligang and Xiong, Yueshan and Huang, Hui},
   title   = {Projective feature learning for {3D} shapes with multi-view depth images},
@@ -4287,6 +4295,7 @@
   journal = ECCV,
   year    = {2020}
 }
+
 
 @inproceedings{Xie2020a,
   title     = {{MLCVNet}: Multi-level context votenet for {3D} object detection},
@@ -4363,7 +4372,6 @@
   year      = {2015}
 }
 
-
 @article{Xu2015a,
   author  = {Xu, Kai and Kim, Vladimir G. and Huang, Qixing and Kalogerakis, Evangelos},
   title   = {Data-Driven Shape Analysis and Processing},
@@ -4383,11 +4391,19 @@
   year    = {2015}
 }
 
+
 @inproceedings{Xu2018,
   author    = {Xu, Yifan and Fan, Tianqi and Xu, Mingye and Zeng, Long and Qiao, Yu},
   title     = {{SpiderCNN}: Deep Learning on Point Sets with Parameterized Convolutional Filters},
   booktitle = ECCV,
   year      = {2018}
+}
+
+@article{Xu2018a,
+  title   = {How powerful are graph neural networks?},
+  author  = {Xu, Keyulu and Hu, Weihua and Leskovec, Jure and Jegelka, Stefanie},
+  journal = {arXiv preprint arXiv:1810.00826},
+  year    = {2018}
 }
 
 @inproceedings{Xu2021,
